#ifndef LIBFILESYNC_CURL_BASE_HPP
#define LIBFILESYNC_CURL_BASE_HPP

namespace filesync::curl {

    class Base {

        protected:
            Base();

    };

}

#endif